Fixed drawing the board and other minor improvements

--- a/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
+++ b/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Source\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Source\0ReadMe.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Source\TextFile1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
