Done, next up, consolidating UIWriter

--- a/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
+++ b/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
@@ -6,14 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Source\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="Source\0ReadMe.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Source\TextFile1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Source\TextFile2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
