--- a/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
+++ b/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi/mészöly_marcell_HKDXX6_SzTF1NagyHázi.csproj
@@ -15,6 +15,9 @@
     <None Update="Source\TextFile2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Source\TextFile3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
